# qt5.4_mingw64_simple_window

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
qcustomLib/: qcustomplot.h
